// =============================================================================
// Evidentra Platform — Database Schema (DBML)
// Import: https://dbdiagram.io/d → paste isi file ini
// Dokumen sumber: docs/DATABASE_SCHEMA.md
// Versi: 1.2 | PostgreSQL (prod) / SQLite (dev)
// =============================================================================

Project evidentra {
  database_type: 'PostgreSQL'
  Note: '''
    Evidentra Digital Forensics & Intelligence Platform
    Modul: d.5 WhatsApp | d.6 Operations | d.7 Evidence | d.8 Intelligence

    IAM: tidak ada registrasi publik. Admin bootstrap via scripts/seed.py;
    admin menambah investigator/viewer lewat API. Penghapusan user = soft delete (is_active).
  '''
}

// -----------------------------------------------------------------------------
// Enums
// -----------------------------------------------------------------------------

Enum user_role {
  admin
  investigator
  viewer
}

Enum case_priority {
  low
  medium
  high
  critical
}

Enum case_status {
  open
  in_progress
  closed
}

Enum task_status {
  todo
  in_progress
  done
}

Enum task_urgency {
  low
  medium
  high
}

Enum evidence_type {
  device
  mobile
  document
  media
}

Enum custody_action {
  received
  transferred
}

Enum transfer_status {
  pending
  approved
  rejected
}

Enum import_status {
  queued
  processing
  completed
  failed
}

Enum message_content_type {
  text
  image
  video
  audio
  document
}

Enum ner_entity_type {
  person
  location
  organization
  date
}

Enum graph_node_type {
  person
  contact
  location
}

// -----------------------------------------------------------------------------
// d.6 — Tactical Operations & IAM
// -----------------------------------------------------------------------------

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  username varchar(50) [not null, unique, note: 'Login username']
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null, note: 'bcrypt hash']
  role user_role [not null, default: 'investigator']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    d.6.6 Identity & Access Management
    - Akun admin pertama: scripts/seed.py (bukan API publik)
    - Admin membuat investigator/viewer via POST /api/v1/users
    - DELETE user = set is_active false (data tetap ada)
    - User nonaktif tidak dapat login
  '''
}

Table cases {
  id uuid [pk, default: `gen_random_uuid()`]
  title varchar(255) [not null]
  description text
  priority case_priority [not null, default: 'medium']
  status case_status [not null, default: 'open']
  assigned_unit varchar(100) [note: 'Unit penanggung jawab']
  assigned_to uuid [ref: > users.id, note: 'Investigator utama']
  created_by uuid [ref: > users.id]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    status
    priority
    assigned_to
  }

  Note: 'd.6.1 Case Registration'
}

Table tasks {
  id uuid [pk, default: `gen_random_uuid()`]
  case_id uuid [not null, ref: > cases.id]
  title varchar(255) [not null]
  description text
  assignee_id uuid [ref: > users.id]
  due_date timestamptz
  urgency task_urgency
  checklist jsonb [note: 'Array checklist items']
  status task_status [not null, default: 'todo', note: 'API Kanban: TODO/IN_PROGRESS/DONE']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    case_id
    status
    assignee_id
  }

  Note: 'd.6.3 Task Assignment | d.6.4 Kanban'
}

Table org_hierarchy {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  parent_id uuid [ref: > org_hierarchy.id, note: 'Self-reference: atasan langsung']
  name varchar(255) [not null, note: 'Nama unit/divisi']
  role varchar(50) [note: 'Peran dalam hierarki organisasi']
  created_at timestamptz [not null, default: `now()`]

  Note: 'd.6.5 Organizational Hierarchy Portal'
}

Table audit_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id]
  action varchar(50) [not null, note: 'user.login | user.logout | user.create | user.update | user.deactivate | case.create | ...']
  entity_type varchar(50) [note: 'case, evidence, user, ...']
  entity_id uuid
  details jsonb
  ip_address varchar(45)
  timestamp timestamptz [not null, default: `now()`]

  indexes {
    user_id
    timestamp
  }

  Note: 'd.6.7 System Audit & Logging (read-only)'
}

Table dashboard_metrics {
  id uuid [pk, default: `gen_random_uuid()`]
  metric_key varchar(100) [not null]
  metric_value jsonb [not null]
  timestamp timestamptz [not null, default: `now()`]

  Note: 'd.6.2 / d.8.4 Dashboard cache metrics'
}

// -----------------------------------------------------------------------------
// d.5 — WhatsApp Intelligence
// -----------------------------------------------------------------------------

Table whatsapp_data {
  id uuid [pk, default: `gen_random_uuid()`, note: 'conversation_id di API']
  case_id uuid [not null, ref: > cases.id]
  wa_chat_jid varchar(255) [not null, note: 'JID asli WhatsApp, e.g. 62812...@s.whatsapp.net']
  contact varchar(255)
  message_count int [not null, default: 0]
  first_message_date timestamptz
  last_message_date timestamptz
  group_name varchar(255)
  created_at timestamptz [not null, default: `now()`]

  indexes {
    case_id
    wa_chat_jid
    contact
    (case_id, wa_chat_jid) [unique, name: 'uq_whatsapp_case_jid']
  }

  Note: 'd.5.2 Communication Profile — ringkasan percakapan per kasus'
}

Table whatsapp_messages {
  id uuid [pk, default: `gen_random_uuid()`]
  conversation_record_id uuid [not null, ref: > whatsapp_data.id]
  timestamp timestamptz [not null]
  sender varchar(255) [not null]
  receiver varchar(255) [not null]
  content text [not null]
  content_type message_content_type [not null, default: 'text']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    conversation_record_id
  }

  Note: 'd.5.4 Search & Filter — pesan individual'
}

Table whatsapp_imports {
  id uuid [pk, default: `gen_random_uuid()`, note: 'import_id di API']
  case_id uuid [not null, ref: > cases.id]
  device_id varchar(100) [not null]
  account varchar(50) [not null, note: 'account_wa_1 | account_wa_2 | account_wa_business']
  source_path varchar(500) [note: 'Override path ke msgstore.db']
  status import_status [not null, default: 'queued']
  conversations_imported int
  messages_imported int
  error_message text
  celery_task_id varchar(255)
  created_at timestamptz [not null, default: `now()`]
  completed_at timestamptz

  Note: 'd.5.1 WhatsApp Import — POST /api/v1/whatsapp/import'
}

// -----------------------------------------------------------------------------
// d.7 — Digital Evidence Management
// -----------------------------------------------------------------------------

Table evidence {
  id uuid [pk, default: `gen_random_uuid()`]
  case_id uuid [not null, ref: > cases.id]
  type evidence_type [not null]
  brand varchar(100)
  imei varchar(25)
  serial_number varchar(100)
  capacity varchar(50)
  condition_on_receipt text
  receipt_photo_url varchar(500)
  location_latitude decimal(10,8) [note: 'd.7.8 Geospatial']
  location_longitude decimal(11,8)
  storage_location varchar(255) [note: 'd.7.6 Asset Vault']
  sha256_hash varchar(64) [note: 'd.7.5 Integrity Verification']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    case_id
    sha256_hash
  }

  Note: 'd.7.1 Repository | d.7.2 Registration'
}

Table custody_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  evidence_id uuid [not null, ref: > evidence.id]
  holder_id uuid [ref: > users.id, note: 'Pemegang aktif']
  action custody_action [not null]
  from_user_id uuid [ref: > users.id]
  to_user_id uuid [ref: > users.id]
  timestamp timestamptz [not null]
  notes text
  verified boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    evidence_id
  }

  Note: 'd.7.3 Evidence Custody & Transfer Tracking'
}

Table transfer_approvals {
  id uuid [pk, default: `gen_random_uuid()`]
  evidence_id uuid [not null, ref: > evidence.id]
  from_user_id uuid [not null, ref: > users.id]
  to_user_id uuid [not null, ref: > users.id]
  status transfer_status [not null, default: 'pending']
  approved_by uuid [ref: > users.id]
  approved_at timestamptz
  notes text
  created_at timestamptz [not null, default: `now()`]

  Note: 'd.7.4 Evidence Transfer Approval (two-party)'
}

// -----------------------------------------------------------------------------
// d.8 — Strategic Intelligence & Correlation
// -----------------------------------------------------------------------------

Table documents {
  id uuid [pk, default: `gen_random_uuid()`]
  case_id uuid [not null, ref: > cases.id]
  file_name varchar(255) [not null]
  file_type varchar(20) [not null, note: 'csv | pdf | apk']
  file_url varchar(500) [not null, note: 'MinIO object URL atau local path']
  extracted_text text
  created_at timestamptz [not null, default: `now()`]

  Note: 'Input dokumen untuk NER & APK analysis'
}

Table ner_entities {
  id uuid [pk, default: `gen_random_uuid()`]
  document_id uuid [not null, ref: > documents.id]
  name varchar(255) [not null]
  entity_type ner_entity_type [not null]
  confidence decimal(3,2) [note: '0.00 – 1.00']
  context text
  created_at timestamptz [not null, default: `now()`]

  indexes {
    document_id
  }

  Note: 'd.8.1 Neural Document Correlation (NER)'
}

Table graph_nodes {
  id uuid [pk, default: `gen_random_uuid()`]
  graph_id uuid [not null, note: 'Logical graph session ID']
  node_id varchar(255) [not null, note: 'Node identifier dalam graf']
  label varchar(255) [not null]
  node_type graph_node_type [not null]
  properties jsonb
  created_at timestamptz [not null, default: `now()`]

  indexes {
    graph_id
  }

  Note: 'd.8.2 Relationship Link Analysis — nodes'
}

Table graph_edges {
  id uuid [pk, default: `gen_random_uuid()`]
  graph_id uuid [not null]
  source_node_id varchar(255) [not null]
  target_node_id varchar(255) [not null]
  weight decimal(5,2) [not null, default: 1.0]
  relationship varchar(50)
  created_at timestamptz [not null, default: `now()`]

  indexes {
    graph_id
  }

  Note: 'd.8.2 Relationship Link Analysis — edges'
}

Table apk_analysis {
  id uuid [pk, default: `gen_random_uuid()`]
  document_id uuid [not null, ref: > documents.id]
  package_name varchar(255)
  version varchar(50)
  permissions jsonb
  components jsonb [note: 'activities, services, receivers, providers']
  certificate jsonb
  threat_indicators jsonb
  created_at timestamptz [not null, default: `now()`]

  Note: 'd.8.3 APK Static Analysis Inspector'
}

// -----------------------------------------------------------------------------
// Table Groups (visual grouping di dbdiagram.io)
// -----------------------------------------------------------------------------

TableGroup d6_operations [color: #3B82F6] {
  users
  cases
  tasks
  org_hierarchy
  audit_logs
  dashboard_metrics
}

TableGroup d5_whatsapp [color: #22C55E] {
  whatsapp_data
  whatsapp_messages
  whatsapp_imports
}

TableGroup d7_evidence [color: #F59E0B] {
  evidence
  custody_logs
  transfer_approvals
}

TableGroup d8_intelligence [color: #A855F7] {
  documents
  ner_entities
  graph_nodes
  graph_edges
  apk_analysis
}
